apps/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  labels:
    app: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      tolerations:
      - key: node-role.kubernetes.io/control-plane
        operator: Exists
        effect: NoSchedule
      containers:
      - name: home-assistant
        image: ghcr.io/home-assistant/home-assistant:stable
        securityContext:
          capabilities:
            add:
            - NET_RAW
        ports:
        - containerPort: 8123
          name: web
        volumeMounts:
        - name: home-assistant-config
          mountPath: /config
      volumes:
      - name: home-assistant-config
        persistentVolumeClaim:
          claimName: home-assistant-pvc
      - name: config-scripts
        configMap:
          name: home-assistant-http-config
      - name: pc-power-secret
        secret:
          secretName: home-assistant-pc-power-secret
