apps/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-service
spec:
  type: NodePort
  selector:
    app: home-assistant
  ports:
  - port: 8123
    targetPort: web
    nodePort: 30123
    name: web
