apps/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: public
  rules:
  - host: home.devflux.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-assistant-service
            port:
              number: 8123
  tls:
  - hosts:
    - home.devflux.ru
    secretName: home-assistant-main-tls-secret
